--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    margin: 0;
     display: flex;
     flex-direction: column;
     min-width: 100vw;
@@ -117,3 +116,14 @@ main {
     margin-top: 5px;
     margin-right: 100px;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+th {}
