--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,15 @@
     text-align: center;
 }
 
-body {
+#body {
     display: flex;
     flex-direction: column;
-    min-width: 100vw;
+    min-width: 99vw;
     min-height: 100vh;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: Arial, sans-serif;
 }
 
 h1 {
@@ -105,7 +109,15 @@ main {
     width: 100vw;
 }
 
+.h-full {
+    height: 100vh;
+}
+
 .align-center {
+    align-items: center;
+}
+
+.items-center {
     align-items: center;
 }
 
@@ -120,6 +132,9 @@ main {
 table {
     width: 100%;
     border-collapse: collapse;
+    border: 2px solid red;
+    border-radius: 10px;
+    overflow: hidden;
 }
 th, td {
     border: 1px solid black;
@@ -134,4 +149,52 @@ th {}
 }
 .col2 {
     background-color: #5e7d8e;
+}
+
+a:visited {
+    color: purple;
+    text-decoration: line-through;
+}
+
+a:link {
+    color: #5e7d8e;
+    text-decoration: none;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80vw;
+    height: 90vh;
+    text-align: center;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #888;
+}
+
+.close:hover {
+    color: #000;
 }
