--- a/src/style.css
+++ b/src/style.css
@@ -129,6 +129,14 @@ main {
     margin-right: 100px;
 }
 
+.small-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+    object-fit: contain;
+    margin: 5px;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
