--- a/src/style.css
+++ b/src/style.css
@@ -129,7 +129,7 @@ main {
     margin-right: 100px;
 }
 
-.small-image {
+img.small-image {
     width: 100px;
     height: 100px;
     border-radius: 8px;
@@ -171,7 +171,7 @@ a:link {
 
 .modal {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
