--- a/src/style.css
+++ b/src/style.css
@@ -206,3 +206,23 @@ a:link {
 .close:hover {
     color: #000;
 }
+
+.mt-auto {
+    margin-top: auto;
+}
+
+.mb-auto {
+    margin-bottom: auto;
+}
+
+.ml-auto {
+    margin-left: auto;
+}
+
+.mr-auto {
+    margin-right: auto;
+}
+
+.t-start {
+    text-align: start;
+}
